<resources>
    <string name="app_name">Firebase Signup demo</string>

    <string name="sign_in_title1">Welcome,</string>
    <string name="sign_in_title2">Sign in to continue!</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot Password?</string>

    <string name="new_user">i am a new user,</string>
    <string name="sign_up">Signup</string>

    <string name="sign_up_title1">Create Account,</string>
    <string name="sign_up_title2">Sign up to get started!</string>
    <string name="full_name">Full Name</string>

    <string name="member">i am a already a member,</string>
    <string name="sign_in">Signin</string>

    <string name="pass">Re-Set Password,</string>
    <string name="set_pass">Change Password to continue!</string>

</resources>