<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_pass"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textColor="@color/london_square"
            android:layout_marginTop="3dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_new_password"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/input_style"
                android:padding="5dp"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_marginTop="15dp"
                android:imeOptions="actionDone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/london_square"
                android:textSize="14dp"
                android:textStyle="bold"
                android:padding="3dp"
                android:layout_marginTop="2dp"
                android:layout_marginLeft="23dp"
                android:background="@color/white"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_pass"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="45dp"
            android:text="Change Password"
            android:textSize="18dp"
            android:textColor="@color/white"
            android:padding="5dp"
            android:textAllCaps="false"
            android:background="@drawable/button_gradient"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"/>

</LinearLayout>